Salesforce_ArjunPersonal/src/objects/Template__c.object
<CustomObject>
    <fields>
        <fullName>Age_From__c</fullName>
        <label>Age From</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Based_On1__c</fullName>
        <label>Based On</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Age</fullName>
                </value>
                <value>
                    <fullName>DOB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Based_On__c</fullName>
        <label>Based On</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Office</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Region</fullName>
                </value>
                <value>
                    <fullName>Postal Code</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Extra_Brochure_to_Send__c</fullName>
        <label>Extra Brochure to Send</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AY</fullName>
                </value>
                <value>
                    <fullName>MLY</fullName>
                </value>
                <value>
                    <fullName>PRW</fullName>
                </value>
                <value>
                    <fullName>EFC</fullName>
                </value>
                <value>
                    <fullName>LOCAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Letter__c</fullName>
        <label>Letter</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Rule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Master Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <label>Postal Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AY</fullName>
                </value>
                <value>
                    <fullName>MLY</fullName>
                </value>
                <value>
                    <fullName>PRW</fullName>
                </value>
                <value>
                    <fullName>HSY</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>GCSE</fullName>
                </value>
                <value>
                    <fullName>IAP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_Brochures__c</fullName>
        <label>Requested Brochures</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AY</fullName>
                </value>
                <value>
                    <fullName>MLY</fullName>
                </value>
                <value>
                    <fullName>PRW</fullName>
                </value>
                <value>
                    <fullName>EFC</fullName>
                </value>
                <value>
                    <fullName>LOCAL</fullName>
                </value>
                <value>
                    <fullName>EF</fullName>
                </value>
                <value>
                    <fullName>HSY</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>To_Age__c</fullName>
        <label>To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Program__c</columns>
        <columns>Master_Rule__c</columns>
        <columns>Requested_Brochures__c</columns>
        <columns>Based_On__c</columns>
        <columns>PostalCode__c</columns>
        <columns>Age_From__c</columns>
        <columns>Based_On1__c</columns>
        <columns>Extra_Brochure_to_Send__c</columns>
        <columns>Is_Enabled__c</columns>
        <columns>To__c</columns>
        <columns>To_Age__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program__c</field>
            <operation>equals</operation>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>